--- a/src/includes/layouts/base.html
+++ b/src/includes/layouts/base.html
@@ -42,6 +42,13 @@
 		<link rel="stylesheet" href="/assets/css/fontawesome-brands.min.css">
 
 		<!-- Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-7EM7TYLQD9"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-7EM7TYLQD9');
+		</script>
 	</head>
 	<body>
 		{% include "partials/header.html" %}
